<resources>
    <string name="app_name">bashkirov_opisanie</string>
    <string name="strelka">TextView</string>
    <string name="vector1">TODO</string>
    <string name="opisanie">Описание</string>
    <string name="save1">Сохранить</string>
    <string name="clear">Очистить</string>
    <string name="backtema">TODO</string>
    <string name="vector2">TODO</string>
    <string name="sohranit">Button</string>
    <string name="sohran">Сохранить</string>
    <string name="save2">Сохранить</string>
    <string name="ochistit">очистить</string>
    <string name="sohr">Сохранить</string>
    <string name="ochist">Очистить</string>
    <string name="polzov">Пользователь</string>
    <string name="proizvod">Производитель</string>
    <string name="opis">Описание</string>
    <string name="opisanie1">Описание</string>
    <string name="opisanie2">Описание</string>
    <string name="opisanie3">Описание</string>
    <string name="opisanie4">Описание</string>
    <string name="update3">Обновить</string>
    <string name="statistics">Статистика</string>
    <string name="kod_reestrov">Коды рестартов</string>
    <string name="obmen_enternet">Обмен Enternet (байт)</string>
    <string name="prinyato_dannyx">Принято данных</string>
    <string name="peredano_dannyx">Передано данных</string>
    <string name="prinyato_golosa4">Принято голоса</string>
    <string name="peredano_golosa">Передано голоса</string>
    <string name="obmen_po_wifi">Обмен по Wi-Fi (байт) v7</string>
    <string name="prinyato_dannyx1">Принято данных</string>
    <string name="prinyato_golosa1">Принято голоса</string>
    <string name="peredano_golosa1">Передано голоса</string>
    <string name="peredano_dannyx1">Передано данных</string>
    <string name="obnovlenie1">Обновить</string>
    <string name="buttonobnova">Обновить</string>
    <string name="wi_fi1">Wi-Fi</string>
    <string name="back1">TODO</string>
    <string name="fon">TODO</string>
    <string name="ssid1">Имя сети (SSID)</string>
    <string name="password1">Пароль</string>
    <string name="razreshenie_podclucheniya">Разрешение подключения</string>
    <string name="sostoyanie1">Состояние</string>
    <string name="versiya">Версия</string>
    <string name="wi_fi_modul">Wi-Fi модуль</string>
    <string name="rejim_sta">Режим STA</string>
    <string name="podcluchenie">Подлкючение</string>
    <string name="ip_adres1">IP-адрес</string>
    <string name="maska_seti2">Маска сети</string>
    <string name="shluz_seti3">Шлюз сети</string>
    <string name="mac_adres1">MAC-адрес</string>
    <string name="rssi1">RSSI</string>
    <string name="knopka">кнопка</string>
    <string name="knopochka">Button</string>
    <string name="sobstvennye1">Собственные</string>
    <string name="tip_soedineniya1">Тип соединения</string>
    <string name="port_zvuka1">Порт звука</string>
    <string name="login3">Login</string>
    <string name="port_dannyx1">Порт данных</string>
    <string name="parol">Пароль</string>
    <string name="shluz_seti2">Шлюз сети</string>
    <string name="dns_seti5">DNS сети</string>
    <string name="pory_zvuka">Порт Звука</string>
    <string name="obnovit">Обновить</string>
    <string name="sostoyanie5">Состояние</string>
    <string name="vnutrennyaya_set">Внутренняя сеть</string>
    <string name="rejum_sata">Режим SATA</string>
    <string name="ip_adres2">IP-адрес</string>
    <string name="connect1">Подключение</string>
    <string name="maska_seti3">Маска сети</string>
    <string name="shluz_seti5">Шлюз сети</string>
    <string name="mac_adres2">MAC-адрес</string>
    <string name="rssi">RSSI</string>
    <string name="ssid">Имя сети (SSID)</string>
    <string name="password2">Пароль</string>
    <string name="canal">Канал</string>
    <string name="wi_fi">Wi-Fi</string>
    <string name="back_button">TODO</string>
    <string name="sobstvennye">Собственные</string>
    <string name="port_dannyx2">Порт данных</string>
    <string name="port_zvuka2">Порт звука</string>
    <string name="ip_adres3">IP-адрес</string>
    <string name="maska_seti6">Маска сети</string>
    <string name="shluz_seti6">Шлюз сети</string>
    <string name="dns_adres">DNS адрес</string>
    <string name="polosa">__________________________________________________________________</string>
    <string name="sostoyanie3">Состояние</string>
    <string name="connect2">Подключение</string>
    <string name="mac_adres">MAC-адрес</string>
    <string name="tip_soedineniya">Тип соединения</string>
    <string name="obnovit_sostoyanie">Обновить состояние</string>
    <string name="polosa1">__________________________________________________________________</string>
    <string name="port_dannyx">Порт данных</string>
    <string name="port_zvuka">Порт звука</string>
    <string name="ip_adres4">IP-адрес</string>
    <string name="maska_seti1">Маска сети</string>
    <string name="shluz_seti1">Шлюз сети</string>
    <string name="ip_adres_dhsp">IP-адрес DHSP</string>
    <string name="dhs_seti">DHS сети</string>
    <string name="top_soedineniya">Тип соединения</string>
    <string name="save_nvram">Сохранить NVRam</string>
    <string name="dns_seti1">DNS сети</string>
    <string name="proizvoditel">Производитель</string>
    <string name="opisanie7">Описание</string>
    <string name="polzovatel">Пользователь</string>
    <string name="sohranit1">Сохранить</string>
    <string name="opisanie5">Описание</string>
    <string name="opisanie6">Описание</string>
    <string name="back2">TODO</string>
    <string name="statistiks">Статистика</string>
    <string name="update_btn">Обновить</string>
    <string name="peredanno_dannyx">Переданно данных</string>
    <string name="kod_restartov">Код рестартов</string>
    <string name="peredano_golosa2">Переданно голоса</string>
    <string name="prinyato_golosa">Принято голоса</string>
    <string name="obmen_enthernet">Обмен Enthernet (байт)</string>
    <string name="wi_fi_v7">Обмен по Wi-Fi (байт) v7</string>
    <string name="peredanno_dannyx3">Переданно данных</string>
    <string name="prinyato_golosa2">Принято голоса</string>
    <string name="peredanno_golosa3">Переданно голоса</string>
    <string name="login">Login</string>
    <string name="update1">Обновить</string>
    <string name="dns_seti3">DNS сети</string>
    <string name="ip_dhcp1">IP-адрес DHCP</string>
    <string name="maska_seti">Маска сети</string>
    <string name="shliz_seti4">Шлюз сети</string>
    <string name="ip_adres">IP-адрес</string>
    <string name="shluz_seti">Шлюз сети</string>
    <string name="ip_dhcp">IP-адрес DHCP</string>
    <string name="password3">Пароль</string>
    <string name="port_zvuk">Порт звука</string>
    <string name="ip_adres_dhcp">ID-адрес DHCP</string>
    <string name="leased1">LEASED</string>
    <string name="dns_seti4">DNS сети</string>
    <string name="vector3">TODO</string>
    <string name="connect">Подключение</string>
    <string name="password">Пароль</string>
    <string name="condition">Состояние</string>
    <string name="port_dannyx3">Порт данных</string>
    <string name="port_zvuka4">Порт звука</string>
    <string name="ip_adress_dhcp">IP-адрес DHCP</string>
    <string name="leased">LEASED</string>
    <string name="dns_seti">DNS сети</string>
    <string name="sostoyanie">Состояние</string>
    <string name="vector">TODO</string>
    <string name="sostoyanie2">Состояние</string>
    <string name="connection">Подключение</string>
    <string name="discover">DISCOVER</string>
    <string name="port_dannyx4">Порт данных</string>
    <string name="port_zvuka3">Порт звука</string>
    <string name="ip_adress">IP-адрес</string>
    <string name="maska_seti5">Маска сети</string>
    <string name="shluz_seti4">Шлюз сети</string>
    <string name="ip_dhcp5">IP-адрес DHCP</string>
    <string name="ip_dns2">IP-адрес DNS сети</string>
    <string name="update">Обновить</string>
    <string name="vector_back">TODO</string>
</resources>