<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".opisanie"
    tools:ignore="ExtraText">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="0sp"
        android:layout_marginEnd="0sp">


        <ImageView
            android:id="@+id/iv_back_button"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="353dp"
            android:contentDescription="@string/back2"
            android:src="@drawable/ic_vector"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="75dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="140dp"
            android:text="@string/opisanie"
            android:textColor="#309EFF"
            android:textSize="30sp"
            android:textStyle="normal|bold"
            tools:ignore="TextContrastCheck" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="0dp"
            android:background="@xml/style_body_firmware_updater"
            android:elevation="20dp"
            android:orientation="vertical"
            android:paddingTop="30sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="-2dp"
            tools:layout_editor_absoluteY="75dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0sp">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="27sp"
                    android:text="@string/proizvoditel"
                    android:textSize="15sp" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/textInputEditText4"
                    android:layout_width="370dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="22sp"
                    android:background="@xml/opisanie_layout"
                    android:gravity="top"
                    android:padding="7sp"
                    android:text="@string/opisanie2"
                    android:textColor="#757575"
                    android:textSize="11sp"
                    tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck,DuplicateClickableBoundsCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp">

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="27sp"
                    android:text="@string/polzovatel"
                    android:textSize="15sp" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/textInputEditText5"
                    android:layout_width="370dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="22sp"
                    android:background="@xml/opisanie_layout"
                    android:gravity="top"
                    android:padding="7sp"
                    android:text="@string/opisanie1"
                    android:textColor="#757575"
                    android:textSize="11sp"
                    tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck,DuplicateClickableBoundsCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp">


                <Button
                    android:id="@+id/sohranit"
                    android:layout_width="165dp"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="22sp"
                    android:layout_marginEnd="15sp"
                    android:text="@string/sohranit1"
                    android:textAllCaps="false"
                    android:textSize="13sp"
                    app:backgroundTint="#037CFF"
                    app:cornerRadius="8dp"
                    tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

                <Button
                    android:id="@+id/button1"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="165dp"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="220sp"
                    android:inputType="textCapWords"
                    android:text="@string/ochist"
                    android:textColor="#C4C4C4"
                    android:textSize="13sp"
                    app:cornerRadius="8dp"
                    app:iconTint="#C4C4C4"
                    tools:ignore="TextViewEdits,TextContrastCheck" />


            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>