<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".opisanie"
    tools:ignore="ExtraText">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="0sp"
        android:layout_marginEnd="0sp">


        <ImageView
            android:id="@+id/iv_back_button"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="353dp"
            android:src="@drawable/ic_vector"
            android:contentDescription="@string/back2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="75dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="140dp"
            android:text="@string/statistiks"
            android:textColor="#309EFF"
            android:textSize="30sp"
            android:textStyle="normal|bold"
            tools:ignore="TextContrastCheck" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="0dp"
            android:background="@xml/style_body_firmware_updater"
            android:elevation="20dp"
            android:orientation="vertical"
            android:paddingTop="30sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="-2dp"
            tools:layout_editor_absoluteY="75dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0sp">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/kod_restartov"
                    android:textSize="15sp" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/textInputEditText4"
                    android:layout_width="370dp"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="22sp"
                    android:background="@xml/okrugl_layout"
                    android:gravity="top"
                    android:padding="10sp"
                    android:textColor="#757575"
                    android:textSize="11sp"
                    tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck,DuplicateClickableBoundsCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp">

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="27sp"
                    android:text="@string/obmen_enthernet"
                    android:textSize="15sp" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp">


                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="22sp"
                    android:text="@string/port_dannyx"
                    android:textSize="12sp" />

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/textInputEditText7"
                    android:layout_width="235dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="155sp"
                    android:background="@xml/okrugl_layout"
                    android:gravity="top"
                    android:padding="8sp"
                    android:textColor="#757575"
                    android:textSize="11sp"
                    tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck,DuplicateClickableBoundsCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp">


                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="22sp"
                    android:text="@string/peredanno_dannyx"
                    android:textSize="12sp" />

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/textInputEditText8"
                    android:layout_width="235dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="155sp"
                    android:background="@xml/okrugl_layout"
                    android:gravity="top"
                    android:padding="8sp"
                    android:textColor="#757575"
                    android:textSize="11sp"
                    tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck,DuplicateClickableBoundsCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp">


                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="22sp"
                    android:text="@string/prinyato_golosa"
                    android:textSize="12sp" />

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/textInputEditText9"
                    android:layout_width="235dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="155sp"
                    android:background="@xml/okrugl_layout"
                    android:gravity="top"
                    android:padding="8sp"
                    android:textColor="#757575"
                    android:textSize="11sp"
                    tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck,DuplicateClickableBoundsCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp">


                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="22sp"
                    android:text="@string/peredano_golosa2"
                    android:textSize="12sp" />

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/textInputEditText10"
                    android:layout_width="235dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="155sp"
                    android:background="@xml/okrugl_layout"
                    android:gravity="top"
                    android:padding="8sp"
                    android:textColor="#757575"
                    android:textSize="11sp"
                    tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck,DuplicateClickableBoundsCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp">

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/wi_fi_v7"
                    android:textSize="15sp" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp">


                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="22sp"
                    android:text="@string/port_dannyx"
                    android:textSize="12sp" />

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/textInputEditText11"
                    android:layout_width="235dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="155sp"
                    android:background="@xml/okrugl_layout"
                    android:gravity="top"
                    android:padding="8sp"
                    android:textColor="#757575"
                    android:textSize="11sp"
                    tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck,DuplicateClickableBoundsCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp">


                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="22sp"
                    android:text="@string/peredanno_dannyx3"
                    android:textSize="12sp" />

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/textInputEditText12"
                    android:layout_width="235dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="155sp"
                    android:background="@xml/okrugl_layout"
                    android:gravity="top"
                    android:padding="8sp"
                    android:textColor="#757575"
                    android:textSize="11sp"
                    tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck,DuplicateClickableBoundsCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp">


                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="22sp"
                    android:text="@string/prinyato_golosa2"
                    android:textSize="12sp" />

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/textInputEditText13"
                    android:layout_width="235dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="155sp"
                    android:background="@xml/okrugl_layout"
                    android:gravity="top"
                    android:padding="8sp"
                    android:textColor="#757575"
                    android:textSize="11sp"
                    tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck,DuplicateClickableBoundsCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp">


                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="22sp"
                    android:text="@string/peredanno_golosa3"
                    android:textSize="12sp" />

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/textInputEditText14"
                    android:layout_width="235dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="155sp"
                    android:background="@xml/okrugl_layout"
                    android:gravity="top"
                    android:padding="8sp"
                    android:textColor="#757575"
                    android:textSize="11sp"
                    tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck,DuplicateClickableBoundsCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="140sp">


                <Button
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="165dp"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="22sp"
                    android:text="@string/update_btn"
                    android:textAllCaps="false"
                    android:textColor="#86DAB9"
                    app:cornerRadius="8sp"
                    tools:ignore="TextContrastCheck" />

                <Button
                    android:id="@+id/button1"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="165dp"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="220sp"
                    android:inputType="textCapWords"
                    android:text="@string/ochist"
                    android:textColor="#C4C4C4"
                    android:textSize="13sp"
                    app:cornerRadius="8dp"
                    app:iconTint="#C4C4C4"
                    tools:ignore="TextViewEdits,TextContrastCheck" />

            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>